--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-chunhuistudio
+<meta charset="utf-8">
+<title> 春辉工作室官网 </title>
+<link rel="stylesheet" type="text/css" href="/CSS/guas.css">
+<link rel="stylesheet" type="text/css" href="/CSS/bj.css">
+
+<div id="footer" style="clear:both;text-align:center;">
+	<div class="gua2"> 欢迎来到春辉工作室的官网 </div>
+	<div class="gua1"></div>
+	<div class="gua0"> 春辉工作室© 保留所有权利 </div>
+	<div class="gua0"> 2023 </div>
+</div>
