--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <div id="footer" style="clear:both;text-align:center;">
 	<div class="gua2"> 欢迎来到春辉工作室的官网 </div>
 	<div class="gua1"></div>
+	<div class="gua1"> 万物之春，德泽之辉。 </div>
+	<div class="gua1"></div>
 	<div class="gua0"> 春辉工作室© 保留所有权利 </div>
 	<div class="gua0"> 2023 </div>
 </div>
